--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,19 +10,17 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginLeft="92dp"
+        android:layout_marginStart="@dimen/marginSide"
+        android:layout_marginLeft="@dimen/marginSide"
         android:onClick="previous"
-        android:text="Prev"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:text="@string/prev"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/button2" />
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="236dp"
-        android:layout_height="62dp"
+        android:layout_width="230dp"
+        android:layout_height="134dp"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -34,19 +32,19 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
-        android:text="@string/next"
+        android:layout_marginTop="@dimen/topMargin"
+        android:layout_marginEnd="@dimen/marginSide"
+        android:layout_marginRight="@dimen/marginSide"
         android:onClick="next"
+        android:text="@string/next"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
     <SeekBar
         android:id="@+id/seekBar"
         android:layout_width="220dp"
         android:layout_height="10dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/topMargin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,13 +54,11 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="@dimen/marginSide"
+        android:layout_marginLeft="@dimen/marginSide"
+        android:layout_marginTop="@dimen/topMargin"
         android:onClick="rewind"
         app:icon="@android:drawable/ic_media_rew"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
-        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
@@ -70,9 +66,9 @@
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginTop="@dimen/topMargin"
+        android:layout_marginEnd="@dimen/marginSide"
+        android:layout_marginRight="@dimen/marginSide"
         android:onClick="pause"
         app:icon="@android:drawable/ic_media_pause"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,27 +79,25 @@
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginTop="@dimen/topMargin"
+        android:layout_marginEnd="@dimen/marginSide"
+        android:layout_marginRight="@dimen/marginSide"
         android:onClick="forward"
         app:icon="@android:drawable/ic_media_ff"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="@dimen/marginSide"
+        android:layout_marginLeft="@dimen/marginSide"
+        android:layout_marginTop="@dimen/topMargin"
         android:onClick="stop"
         app:icon="@android:drawable/ic_media_next"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
-        app:layout_constraintHorizontal_bias="0.407"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
+    
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
